day 8 part 2 wip